k8s/client/mf-shell/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mf-shell-app
    namespace: default
    labels:
        app: mf-shell-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mf-shell-app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: mf-shell-app
        spec:
            containers:
                - name: mf-shell-app
                  image: mf-shell-app # Updated image name
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 4200 # Match with Angular's development port
                        protocol: TCP
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 4200
                      initialDelaySeconds: 5
                      periodSeconds: 10
                      timeoutSeconds: 5
                      failureThreshold: 3
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 4200
                      initialDelaySeconds: 15
                      periodSeconds: 20
                      timeoutSeconds: 5
                      failureThreshold: 3
            restartPolicy: Always
