k8s/client/mf-shell/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: microfrontend-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: mf-shell-service
                            port:
                                number: 4200
                  - path: /appointments
                    pathType: Prefix
                    backend:
                        service:
                            name: mf-appointment-service
                            port:
                                number: 4201
